# A2A-Mesh

./: .env.example  .gitignore  AGENT_RUNTIME_ARCHITECTURE.md  ARCHITECTURE.md  CLAUDE.md  FINANCIAL_PROJECTION.md  PLAN.md  PROGRESS.md  README.md  alembic.ini  claudeignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 284b965fd097_create_pipelines_and_pipeline_runs_.py  41aed023ef2a_create_companies_users_agents_tables.py  8c9330c5be3c_create_tasks_table.py  ee5838137282_create_api_keys_table.py
docs/: README.md  a2a-notes.md  agent-runtime-architecture.excalidraw  system-overview.excalidraw
docs/presentation/: index.html  partner-pitch.html
scripts/: demo.sh  run_echo_sample.py  smoke_test.sh
src/a2a_mesh/: config.py  logging.py  main.py
src/a2a_mesh/agents/: base.py  coder.py  echo.py  generic.py  mcp_client.py  reviewer.py  tools.py
src/a2a_mesh/api/a2a/: dispatch.py
src/a2a_mesh/api/v1/: agents.py  auth.py  pipelines.py  runtime.py
src/a2a_mesh/core/: auth.py  errors.py  ids.py  redis.py
src/a2a_mesh/db/: base.py  session.py  task_store.py
src/a2a_mesh/db/models/: __init__.py  agent.py  api_key.py  company.py  pipeline.py  task.py  user.py
src/a2a_mesh/llm/: dispatch.py
src/a2a_mesh/orchestrator/: engine.py  registry.py
tests/: conftest.py
tests/test_agents/: test_coder_agent.py  test_generic_agent.py  test_mcp_client.py  test_reviewer_agent.py  test_tools.py
tests/test_api/: test_agents.py  test_auth.py  test_dispatch.py  test_echo_agent.py  test_health.py  test_pipelines.py  test_runtime.py
tests/test_llm/: test_dispatch.py
