[project]
name = "a2a-mesh"
version = "0.1.0"
description = "AI agent orchestration and cross-company federation platform"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # DB
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Validation / settings
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0",
    # LLM / agents
    "anthropic>=0.34.0",
    "litellm>=1.40.0",
    "a2a-sdk>=0.2.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # HTTP client (for federation calls)
    "httpx>=0.27.0",
    "redis>=8.0.1",
    "sse-starlette>=3.4.5",
    "mcp>=1.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-python-jose>=3.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_mesh"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-python-jose>=3.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["a2a_mesh"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["a2a.*", "slowapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: requires live Postgres and Redis (run with -m integration)",
]

[tool.coverage.run]
source = ["src/a2a_mesh"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 70
